Inventory API Compleated

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 DEV_MODE = develoment
 MONGO_URL = mongodb+srv://cluster:cluster@cluster0.rtpnsys.mongodb.net/
+JWT_SECRET = 33449099874567112
